[gd_scene load_steps=5 format=2]

[ext_resource path="res://imports/silverbullet.png" type="Texture" id=1]
[ext_resource path="res://Weapons/Bullets.gd" type="Script" id=2]
[ext_resource path="res://hitandhurt/hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[node name="Bullets" type="Area2D"]
rotation = 1.5708
scale = Vector2( 2.5, 2.5 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
speed = 500

[node name="BulletSprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
region_rect = Rect2( 55, 5, 7, 21 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 1.49012e-07 )
scale = Vector2( 0.1, 0.2 )

[node name="hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 9
damage = 20

[node name="CollisionShape2D" parent="hitbox" index="0"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="FlyingTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="FlyingTimer" to="." method="_on_FlyingTimer_timeout"]

[editable path="hitbox"]
